<?xml version="1.0" encoding="utf-8"?>
<com.bis.android.plug.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_lighter_f2"
    android:orientation="vertical"
    tools:context=".activity.UpdatePasswordActivity">

    <include layout="@layout/head_include" />

    <com.bis.android.plug.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_88"
        android:layout_marginTop="@dimen/px_20"
        android:background="@android:color/white"
        android:paddingLeft="@dimen/px_20">

        <TextView
            android:id="@+id/update_pass_tv_old_name"
            android:layout_width="@dimen/px_120"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/text_gray3"
            android:textSize="@dimen/text_first_font_size"
            android:text="@string/update_pass_old" />

        <EditText
            android:id="@+id/update_pass_et_old_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/update_pass_old_hint"
            android:gravity="center_vertical|right"
            android:inputType="textPassword"
            android:paddingRight="@dimen/px_20"
            android:textSize="@dimen/text_second_font_size"
            android:maxLength="32"
            android:textColor="@color/text_gray3"
            android:textColorHint="@color/text_gray9"
            android:layout_toRightOf="@id/update_pass_tv_old_name"
            android:background="@null" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_lighter_f2" />
    </com.bis.android.plug.autolayout.AutoRelativeLayout>

    <com.bis.android.plug.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_88"
        android:background="@android:color/white"
        android:paddingLeft="@dimen/px_20">

        <TextView
            android:id="@+id/update_pass_tv_new_name"
            android:layout_width="@dimen/px_120"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/text_gray3"
            android:textSize="@dimen/text_first_font_size"
            android:text="@string/update_pass_new" />

        <EditText
            android:id="@+id/update_pass_et_new_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/update_pass_new_hint"
            android:paddingRight="@dimen/px_20"
            android:gravity="center_vertical|right"
            android:inputType="textPassword"
            android:textSize="@dimen/text_second_font_size"
            android:maxLength="32"
            android:textColor="@color/text_gray3"
            android:textColorHint="@color/text_gray9"
            android:layout_toRightOf="@id/update_pass_tv_new_name"
            android:background="@null" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_lighter_f2" />
    </com.bis.android.plug.autolayout.AutoRelativeLayout>

    <com.bis.android.plug.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_88"
        android:background="@android:color/white"
        android:paddingLeft="@dimen/px_20">

        <TextView
            android:id="@+id/update_pass_tv_new_name2"
            android:layout_width="@dimen/px_120"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/text_gray3"
            android:textSize="@dimen/text_first_font_size"
            android:text="@string/update_pass_new2" />

        <EditText
            android:id="@+id/update_pass_et_new_pass2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/update_pass_new2_hint"
            android:paddingRight="@dimen/px_20"
            android:inputType="textPassword"
            android:gravity="center_vertical|right"
            android:textSize="@dimen/text_second_font_size"
            android:maxLength="32"
            android:textColor="@color/text_gray3"
            android:textColorHint="@color/text_gray9"
            android:layout_toRightOf="@id/update_pass_tv_new_name2"
            android:background="@null" />

    </com.bis.android.plug.autolayout.AutoRelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:background="@color/gray_lighter_f2" />

</com.bis.android.plug.autolayout.AutoLinearLayout>