<?xml version="1.0" encoding="utf-8"?>
<com.bis.android.plug.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_lighter_f2"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include
        layout="@layout/head_include"/>
    <com.bis.android.plug.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/px_30"
        android:paddingRight="@dimen/px_30"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_img_gray" />

        <com.bis.android.plug.autolayout.AutoLinearLayout
            android:id="@+id/account_linear"
            android:layout_width="match_parent"
            android:layout_height="88px"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="手机号"
                android:textColor="@color/text_gray3"
                android:textSize="28px"/>

            <EditText
                android:id="@+id/banding_account_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/px_20"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/telphone_input_tip"
                android:inputType="number"
                android:textColor="@color/text_gray6"
                android:textColorHint="@color/text_gray9"
                android:textSize="28px" />
        </com.bis.android.plug.autolayout.AutoLinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_img_gray" />

        <com.bis.android.plug.autolayout.AutoLinearLayout
            android:id="@+id/pwd_linear"
            android:layout_width="match_parent"
            android:layout_height="88px"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28px"
                android:textColor="@color/text_gray3"
                android:text="密码"/>

            <EditText
                android:id="@+id/banding_pwd_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/px_50"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/pwd_set_tip"
                android:inputType="textPassword"
                android:textColor="@color/text_gray6"
                android:textColorHint="@color/text_gray9"
                android:textSize="28px" />

            <LinearLayout
                android:id="@+id/see_pwd_linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/px_20">

                <TextView
                    android:id="@+id/see_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/icon_close" />
            </LinearLayout>

        </com.bis.android.plug.autolayout.AutoLinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_img_gray" />

        <com.bis.android.plug.autolayout.AutoLinearLayout
            android:id="@+id/code_linear"
            android:layout_width="match_parent"
            android:layout_height="88px"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray3"
                android:textSize="28px"
                android:text="验证码"/>

            <EditText
                android:id="@+id/banding_code_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/px_20"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/code_input_tip"
                android:inputType="number"
                android:textColor="@color/text_gray6"
                android:textColorHint="@color/text_gray9"
                android:textSize="28px" />

            <TextView
                android:id="@+id/banding_get_code"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/px_60"
                android:background="@drawable/get_code_bg_selector"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/code_send"
                android:paddingLeft="@dimen/px_10"
                android:paddingRight="@dimen/px_10"
                android:textColor="@android:color/white"
                android:textSize="24px" />

        </com.bis.android.plug.autolayout.AutoLinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_img_gray" />
    </com.bis.android.plug.autolayout.AutoLinearLayout>

    <Button
        android:id="@+id/btn_banding"
        android:layout_width="match_parent"
        android:layout_height="88px"
        android:layout_marginTop="@dimen/px_50"
        android:layout_marginLeft="@dimen/px_40"
        android:layout_marginRight="@dimen/px_40"
        android:background="@drawable/shape_round_half_rec_main_light"
        android:clickable="false"
        android:text="@string/sure"
        android:textColor="@android:color/white"
        style="?android:attr/borderlessButtonStyle"
        android:textSize="32px"/>


</com.bis.android.plug.autolayout.AutoLinearLayout>
