<?xml version="1.0" encoding="utf-8"?>
<com.bis.android.plug.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/banding"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.donut.app.activity.BandingPhoneActivity">

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|end"
        android:layout_marginRight="@dimen/px_20"
        android:layout_marginTop="@dimen/px_30"
        android:padding="@dimen/px_5"
        android:text="跳过"
        android:textColor="@color/text_gray9"/>

    <com.bis.android.plug.autolayout.AutoLinearLayout
        android:layout_width="590px"
        android:layout_height="460px"
        android:layout_marginTop="@dimen/px_80"
        android:background="@drawable/bangding_mainview_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/px_20"
        android:paddingRight="@dimen/px_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/px_140"
            android:gravity="center"
            android:text="绑定您的手机"
            android:textColor="@android:color/white"
            android:textSize="30px"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_img_gray"/>

        <com.bis.android.plug.autolayout.AutoLinearLayout
            android:id="@+id/account_linear"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_88"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_phone_white"/>

            <EditText
                android:id="@+id/banding_account_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/px_20"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/telphone_input_tip"
                android:inputType="number"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="@dimen/text_second_font_size"/>
        </com.bis.android.plug.autolayout.AutoLinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_img_gray"/>

        <com.bis.android.plug.autolayout.AutoLinearLayout
            android:id="@+id/pwd_linear"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_88"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_pwd_white"/>

            <EditText
                android:id="@+id/banding_pwd_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/px_20"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/pwd_set_tip"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="@dimen/text_second_font_size"/>

            <LinearLayout
                android:id="@+id/see_pwd_linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/px_20">

                <TextView
                    android:id="@+id/see_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/icon_close_white"/>
            </LinearLayout>

        </com.bis.android.plug.autolayout.AutoLinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_img_gray"/>

        <com.bis.android.plug.autolayout.AutoLinearLayout
            android:id="@+id/code_linear"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_88"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_ver_white"/>

            <EditText
                android:id="@+id/banding_code_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/px_20"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/code_input_tip"
                android:inputType="number"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="@dimen/text_second_font_size"/>

            <TextView
                android:id="@+id/banding_get_code"
                android:layout_width="@dimen/px_150"
                android:layout_height="@dimen/px_60"
                android:background="@drawable/get_code_bg_selector"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/code_send"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_fourth_font_size"/>

        </com.bis.android.plug.autolayout.AutoLinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_img_gray"/>
    </com.bis.android.plug.autolayout.AutoLinearLayout>

    <Button
        android:id="@+id/btn_banding"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="590px"
        android:layout_height="@dimen/px_88"
        android:layout_marginTop="@dimen/px_50"
        android:background="@drawable/shape_round_half_rec_main_light"
        android:clickable="false"
        android:text="@string/sure"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_32_size"/>


</com.bis.android.plug.autolayout.AutoLinearLayout>
