<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@android:color/transparent"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/px_15"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/type_all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/auction_type_0"
                android:textColor="@drawable/tab_text_selector"
                android:textSize="12sp"/>

            <ImageView
                android:id="@+id/type_all_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/order_type_selected"
                android:visibility="gone"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:background="@color/gray_lighter_f2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/px_15"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/type_doing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/auction_type_1"
                android:textColor="@drawable/tab_text_selector"
                android:textSize="12sp"/>

            <ImageView
                android:id="@+id/type_doing_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/order_type_selected"
                android:visibility="gone"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:background="@color/gray_lighter_f2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/px_15"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/type_done"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/auction_type_2"
                android:textColor="@drawable/tab_text_selector"
                android:textSize="12sp"/>

            <ImageView
                android:id="@+id/type_done_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/order_type_selected"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>